[project]
version = "1.0.0"
name = "gha-ai-changelog"
description = "Summarize PR commits into changelog entries using GitHub Models AI API."
authors = [
    {name = "qte77", email = "qte@77.gh"}
]
readme = "README.md"

[tool.uv]
exclude-newer = "2026-03-17T00:00:00Z"

[tool.ruff]
src = ["."]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "E203",  # Whitespace before ':'
]

[tool.bumpversion]
current_version = "1.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} -> {new_version}"
message = "Bump version: {current_version} -> {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "![Version](https://img.shields.io/badge/version-{current_version}-8A2BE2)"
replace = "![Version](https://img.shields.io/badge/version-{new_version}-8A2BE2)"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]
"""
replace = """
## [Unreleased]

---

## [{new_version}] - {now:%Y-%m-%d}
"""
